WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98243
Fix unused parameter compile warnings.
https://bugs.webkit.org/show_bug.cgi?id=98243
Summary
Fix unused parameter compile warnings.
Kangil Han
Reported
2012-10-03 02:03:57 PDT
Fixed unused parameter compile warnings found during WebKit EFL debug build.
Attachments
patch
(10.96 KB, patch)
2012-10-03 02:13 PDT
,
Kangil Han
ap
: review+
Details
Formatted Diff
Diff
patch
(11.03 KB, patch)
2012-10-03 17:53 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kangil Han
Comment 1
2012-10-03 02:13:51 PDT
Created
attachment 166831
[details]
patch
Gyuyoung Kim
Comment 2
2012-10-03 17:36:19 PDT
Comment on
attachment 166831
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=166831&action=review
> Source/WebKit2/WebProcess/Plugins/PluginProxy.cpp:450 > +void PluginProxy::contentsScaleFactorChanged(float /*scaleFactor*/)
I think function name can be enough to represent parameter name. So, this parameter can be removed.
Kangil Han
Comment 3
2012-10-03 17:53:21 PDT
Created
attachment 167009
[details]
patch Done!
WebKit Review Bot
Comment 4
2012-10-03 18:50:01 PDT
Comment on
attachment 167009
[details]
patch Clearing flags on attachment: 167009 Committed
r130353
: <
http://trac.webkit.org/changeset/130353
>
WebKit Review Bot
Comment 5
2012-10-03 18:50:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug