Fix unused parameter compile warnings. https://bugs.webkit.org/show_bug.cgi?id=98243

Patch by Kangil Han <kangil.han@samsung.com> on 2012-10-03
Reviewed by Alexey Proskuryakov.

Source/WebCore:

Fixed unused parameter compile warning by removing parameter names and adding UNUSED_PARAM usage.

* plugins/PluginDebug.cpp:
(WebCore::prettyNameForNPPVariable):
* plugins/npapi.cpp:
(NPN_MemFlush):
(NPN_RequestRead):
(NPN_GetJavaPeer):

Source/WebKit/efl:

Fixed unused parameter compile warning by removing page parameter name and UNUSED_PARAM usage.

* WebCoreSupport/PlatformStrategiesEfl.cpp:
(PlatformStrategiesEfl::getPluginInfo):

Source/WebKit2:

Fixed unused parameter compile warnings by removing parameter names, adding UNUSED_PARAM usage and commenting out.

* PluginProcess/WebProcessConnection.cpp:
(WebKit::WebProcessConnection::createPluginInternal):
* PluginProcess/unix/PluginProcessUnix.cpp:
(WebKit::PluginProcess::platformInitialize):
* WebProcess/Plugins/Netscape/JSNPObject.cpp:
(WebKit::JSNPObject::getOwnPropertyNames):
* WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
(WebKit::NPN_RequestRead):
(WebKit::NPN_NewStream):
(WebKit::NPN_Write):
(WebKit::NPN_MemFlush):
(WebKit::NPN_ReloadPlugins):
(WebKit::NPN_GetJavaPeer):
(WebKit::NPN_InvalidateRegion):
(WebKit::NPN_ForceRedraw):
* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::contentsScaleFactorChanged):
* WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
(WebKit::NetscapePlugin::platformPostInitializeWindowed):
* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::contentsScaleFactorChanged):

Canonical link: https://commits.webkit.org/116350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130353 268f45cc-cd09-0410-ab3c-d52691b4dbfc